# weathergirl

./: README.md  districts.geojson  main.py  pyproject.toml
.github/workflows/: ci.yml
src/weathergirl/: __init__.py
